# graphknows

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Brilliant Labs - Life Graph SOW v5.md  CONTRIBUTING.md  GOAL.MD  LICENSE  README.md  TASKS.md  benchmark_gliner.py  check_db.py  check_db_ids.py  config.yaml  context_dump.txt  debug_retrieval.py  docker-compose.dev.yaml  docker-compose.yaml  example_graphgen.py  example_graphrag.py  manual_edge_debug.py  output.txt  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  reproduce_issue.py  requirements.txt  run.txt  smoke_test.py  synthetic_gen.py  synthetic_test_data.csv  test_data.csv  turbo.json  updates.txt  verify_extraction.py
.devcontainer/: Dockerfile  devcontainer.json
dashboard/: launcher.py
docs/: GOAL.md
frontend/: README.md  launcher.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
output/: knowledge_graph.graphml  processing_state.json  simulation_report.json
scripts/: generate-types.sh
services/graphgen/: .env.example  Dockerfile  README.md  __init__.py  package.json  pyproject.toml  requirements.txt
services/graphgen/community/: metrics.py
services/graphgen/config/: loader.py
services/graphgen/embeddings/: __init__.py
services/graphgen/falkordb/: __init__.py
services/graphgen/graph/: centrality.py  coref.py  pruning.py
services/graphgen/graph/parsers/: base.py
services/graphgen/pipeline/: __init__.py  iterative.py
services/graphgen/src/: main.py
services/graphgen/src/kg/: KG_README.md  llm.py  schema.py  types.py
services/graphgen/src/kg/community/: detection.py  subcommunities.py
services/graphgen/src/kg/config/: __init__.py  compat.py  settings.py
services/graphgen/src/kg/embeddings/: model.py  rag.py
services/graphgen/src/kg/falkordb/: indexes.py  postgres_store.py  uploader.py
services/graphgen/src/kg/graph/: __init__.py  coref.py  extraction.py  extractors.py  parsing.py  pruning.py  resolution.py  schema.py  similarity.py  text_resolution.py
services/graphgen/src/kg/graph/parsers/: __init__.py  base.py  generic.py  life.py  multilingual.py
services/graphgen/src/kg/neo4j/: __init__.py  driver.py  indexes.py  schema_bootstrap.py  uploader.py
services/graphgen/src/kg/parser/: __init__.py  docx.py  excel.py  html.py  image.py  markdown.py  pdf.py  pptx.py  registry.py  text.py
services/graphgen/src/kg/pipeline/: __init__.py  core.py  iterative.py  stages.py
services/graphgen/src/kg/plugins/: __init__.py  topics.py
services/graphgen/src/kg/service/: __init__.py  graph_service.py
services/graphgen/src/kg/summarization/: core.py  models.py
services/graphgen/src/simulation/: __init__.py  adapter.py  generator.py  metrics.py  orchestrator.py  synthetic_gen.py
services/graphrag/: .env.example  Dockerfile  README.md  kg_main.py  package.json  pyproject.toml  requirements.txt
services/graphrag/src/: APP_README.md  config.yaml  main.py
services/graphrag/src/agent/: __init__.py  llamaindex_agent.py  tools.py  workflow.py
services/graphrag/src/common/config/: __init__.py  schema.py  settings.py
services/graphrag/src/infrastructure/: __init__.py  config.py  graph_db.py  llm.py  neo4j_driver.py  postgres_store.py
services/graphrag/src/llama/: __init__.py  embeddings.py  graph_store.py
services/graphrag/src/mcp/: __init__.py  server.py
services/graphrag/src/models/: __init__.py
services/graphrag/src/services/: __init__.py  context_builder.py  graph_retriever.py  graph_tools.py  retrieval.py
services/graphrag/src/workflow/: __init__.py  graph_workflow.py
src/: kg_main.py
test_reports/: latest_run.jsonl
tests/: conftest.py  test_community_detection.py  test_iterative_pipeline.py  test_kg_config.py  test_kg_graph_operations.py  test_kg_improvements.py  test_kg_pipeline.py  (+4 more)
(+207 files in other folders)
