[project]
name = "graphknows"
version = "0.1.0"
description = "Political intelligence platform built on a knowledge graph"
readme = "README.md"
requires-python = ">=3.11"

# UV workspace: each service manages its own dependencies
[tool.uv.workspace]
members = [
    "services/graphgen",
    "services/graphrag",
]

# Dev-only tools (linting, testing) — installed in the devcontainer workspace
[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
